@@ -10,6 +10,7 @@ version 1.0.0 - 13-July-2011
 . [FIX] ccpLineIntersect works as expected. Improved performance (issue #1174, #1193)
 . [FIX] cocosLive: fixed memory leak in ScoreServerPost
 . [FIX] Director: Added asserts to prevent calling startAnimation twice.
+. [FIX] EAGLView: Fixed leak when using multisampling and resizing the layer (issue #1198)
 . [FIX] Menu: Column aligment is centered. Removed the +10 pixels padding.
 . [FIX] Node: Node#Draw calls super#draw
 . [FIX] Tests: Fixed memory leak in ParticleTest
